--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9",
     "pg": "^8.14.1",
-    "uuid": "^11.1.0"
+    "react": "^19.1.0",
+    "uuid": "^11.1.0",
+    "vite": "^6.3.2"
   }
 }
