--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9",
     "pg": "^8.14.1",
-    "react-bootstrap": "^2.10.9",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.9",
+    "react-toastify": "^11.0.5",
     "uuid": "^11.1.0",
     "vite": "^6.3.2"
   }
